<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/com_parse_ui_vertical_margin"
    android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
    android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
    android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background">

    <include
        layout="@layout/com_parse_ui_parse_login_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/ParseLoginUI.TextView"
            android:text="@string/profile_title_logged_in" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView" />

        <Button
            android:id="@+id/homepage_button"
            style="@style/ParseLoginUI.Button"
            android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
            android:text="@string/profile_homepage_label"/>

        <Button
            android:id="@+id/login_or_logout_button"
            style="@style/ParseLoginUI.Button"
            android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
            android:layout_marginBottom="@dimen/com_parse_ui_large_vertical_spacing"
            android:text="@string/profile_logout_button_label"/>

        <TextView
            android:id="@+id/profile_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView"/>

        <Button
            android:id="@+id/guest_login_button"
            style="@style/ParseLoginUI.Button"
            android:layout_marginTop="24dp"
            android:text="@string/profile_guest_login_button_label"/>
    </LinearLayout>
</LinearLayout>