<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/home"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    tools:showIn="@layout/app_bar_home_page"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePage">


    <include layout="@layout/toolbar" />
    <!--<include layout="@layout/dropdownmenu" />-->


    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--android:paddingRight="@dimen/activity_horizontal_margin"-->

<!--<android.support.v7.widget.Toolbar-->
<!--android:id="@+id/my_action_bar_toolbar"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="39dp"-->
<!--android:background="#AFAFAF"-->
<!--android:minHeight="200dp">-->


<!--</android.support.v7.widget.Toolbar>-->


</LinearLayout>

