<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/shuffle_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <at.markushi.ui.CircleButton
            android:id="@+id/trash_button"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:src="@drawable/ic_action_trash"
            app:cb_color="#A6A6A6"
            app:cb_pressedRingWidth="8dip"
            android:layout_weight="0.01"
            android:layout_gravity="right"
            android:layout_marginLeft="60dp" />

        <at.markushi.ui.CircleButton
            android:id="@+id/wish_list_button"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:src="@drawable/ic_action_heart"
            android:layout_marginRight="60dp"
            app:cb_color="#FFB3FF"
            app:cb_pressedRingWidth="8dip"
            android:layout_weight="0.01"
            android:layout_gravity="left" />
    </LinearLayout>

        <!--<com.andtinder.view.CardContainer-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/card_container"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

</RelativeLayout>
