<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HomePage">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_action_shuffle"
        app:showAsAction="ifRoom"
        android:title="shuffle"/>
    <!-- Settings, should always be in the overflow -->
    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never"/>-->

</menu>
